Fix 2011 Sponsors horizontal alignment

--- a/_sass/partials/_collections.scss
+++ b/_sass/partials/_collections.scss
@@ -114,6 +114,11 @@
 }
 
 @media only screen and (min-width: 576px) {
+  .sponsor-img {
+    align-self: flex-start;
+    padding: 0 0 16px;
+  }
+
   .sponsors2011 {
     .sponsor {
       // flex-direction: column-reverse;
@@ -121,9 +126,8 @@
       justify-content: flex-start;
     }
 
-    .sponsor-img {
-      align-self: flex-start;
-      padding: 0 0 16px;
+    .sponsor-bio {
+      padding: 0 30px 0 0;
     }
 
     .org-left,
@@ -146,9 +150,10 @@
 
 @media only screen and (min-width: 768px) {
   .sponsors2011 {
-    .sponsor {
-
+    .sponsor-bio {
+      padding: 0 30px 0 0;
     }
+
     .organizing-sponsors-box {
       display: flex;
       justify-content: space-around;
